SigmaCodebackup3rdSep/objects/BOM_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Lead_Time_Interval__c</fullName>
        <formula>TEXT(Product__r.Lead_Time_Interval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Lead Time Interval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lead_Time__c</fullName>
        <formula>Product__r.Lead_Time_for_Procurement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Lead Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Conversion is not Possible for Non stock Items.Please make a Stock Item as true and try to Add again.</errorMessage>
            <filterItems>
                <field>Product2.Stock_Item__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Line Items (Product)</relationshipLabel>
        <relationshipName>Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOM Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Quantity__c  *  Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <formula>Vendor_Product__r.Buying_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product__c</field>
                <operation>equals</operation>
                <valueField>Vendor_Product__c.Product_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>Vendor_Product__c.Is_Preferred__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vendor_Product__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>BOM_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Product Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckStockItemProducts</fullName>
        <active>true</active>
        <description>Added to Restrict Non stok Items as a Line Item for BOM Products.</description>
        <errorConditionFormula>OR(ISBLANK(Product__r.Name),Product__r.Stock_Item__c == false,
Products__r.Stock_Item__c == false)</errorConditionFormula>
        <errorMessage>&quot;Please select any stock item products  to Add Line Item&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Quantity__c )</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Enter  Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_line_item_product</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Product__r.Name)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Please select product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valrestrict_Same_Prod_as_LineItem</fullName>
        <active>true</active>
        <errorConditionFormula>Products__c = Product__c</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Bom Product and Line Item Product Should not be same.</errorMessage>
    </validationRules>
</CustomObject>